2006-02-22  Adam Jocksch  <ajocksch@redhat.com>

	* glade/debugresultswindow.glade: Added.
	* glade/debugresultswindow.gladep: Added.

2006-02-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* Gui.java (gui): rearanged splash screen show/hide calls
	to be done in the proper order.
	* glade/procpop.glade: Fixed proc/thread view sizes.
	Halved the size of threadView.

2006-02-18  Phil Muldoon  <pmuldoon@redhat.com>

	glade/procpop.glade: Removed unused or 
	unimplemented menu items.

2006-02-17  Phil Muldoon  <pmuldoon@redhat.com>

	* Gui.java (setupErrorHandlers): Log only to logfile
	and do not reflect to console.

	* Gui.java: Do not use Timer objects
	in splashscreen (causes sigabort on GC)
	see sourceware.org bza #2333

2006-02-16  Adam Jocksch  <ajocksch@redhat.com>
	
	* DebugHistory.java: Added.
	* DummyDebugResults.java: Added.

2006-02-15  Adam Jocksch  <ajocksch@redhat.com>

	* DummySourceWindow.java: Removed excess imports.

	* glade/frysk_source.glade: Re-added labels into glade file, changed
	padding and alignment of search bar items.
	* glade/frysk_source_prefs.glade: Changed padding.

2006-02-10  Adam Jocksch  <ajocksch@redhat.com>

	* DummySourceWindow.java: Added.
	* glade/frysk_source.glade: Removed reference to gnome library again,
	seems that glade is re-inserting it when the file it saved.

2006-02-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* test/TestObserverSaveLoad.java (testExport): Cleaned up
	after test is run (closed bz 2318).

2006-02-09  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added "Save" Button to 
	CustomObserverWindow
	* Gui.java (gui): Added splash screen showing/hiding.
	
2006-02-09  Adam Jocksch  <ajocksch@redhat.com>

	* images/SplashScreen.png: Added.

2006-02-09  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Renamed "Creat Custom Observer"
	to "Edit Custom Observers"

2006-02-09  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/procpop.glade: Removed Credits button.
